# diffeopt

./: .travis.yml  LICENSE  README.md  Readme.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_package.yml
diffeopt/: action_loss.py  descent.py  group.py  optim.py  sum_representation.py  utils.py
diffeopt/action/: density.py  function.py
diffeopt/cometric/: laplace.py
diffeopt/distance/: information.py
diffeopt/group/: base.py  ddmatch.py  deformation.py  representation.py
diffeopt/group/ddmatch/: group.py  representation.py
diffeopt/group/ddmatch/action/: __init__.py  density.py  function.py
src/diffeopt/: optim.py  utils.py
src/diffeopt/cometric/: laplace.py
src/diffeopt/distance/: information.py
src/diffeopt/group/: deformation.py  representation.py
src/diffeopt/group/ddmatch/: group.py  representation.py
src/diffeopt/group/ddmatch/action/: density.py  function.py
tests/: test_descent.py  test_distance.py  test_grad.py  test_group.py  test_optim.py  test_utils.py
