[project]
name = "diffeopt"
version = "0.1.0"
authors = [{name = "Olivier Verdier", email="olivier.verdier@gmail.com"}]
description = "Optimisation on Diffeomorphisms"
dependencies = [
    "ddmatch @ git+https://github.com/olivierverdier/ddmatch",
    "torch",
    "numpy",
    "numba", # only used in `ddmatch`
    "matplotlib", # only used in `ddmatch`
]
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "."
]