[project]
name = "diffeopt"
version = "0.2.1"
requires-python = ">=3.9"
authors = [{name = "Olivier Verdier", email="olivier.verdier@gmail.com"}]
description = "Optimisation on Diffeomorphisms"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "ddmatch @ git+https://github.com/olivierverdier/ddmatch",
    "torch",
    "numpy",
    "numba", # only used in `ddmatch`
    "matplotlib", # only used in `ddmatch`
]


[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "flake8>=7.1.2",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
